--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css"  href="/css/registration.css">
+    <link rel="stylesheet" type="text/css"  href="/css/registration_number.css">
     <title>Document</title>
     <style>
         
