--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,22 +1,25 @@
-
 <body>
-  
+
+
 	<div class="section">
 		<div class="registration">
 			<h1>Registration Application</h1>
 		</div>
-		<div class="first-section">
-			<h1>Registration Number: <textarea name="name" class=" inputTxt"></textarea>
-				
-			</h1>
-		</div>
+
+		<form action="/" method="POST">
+			<div class="first-section">
+				<h1>Registration Number:</h1>
+				<textarea name="name" class=" inputTxt"></textarea>
+				<br>
+				<button class="first-button" on type="submit" name="button">Add</button>
+			</div>
+		</form>
 		<div class="span">
-            <button class="first-button" on type="button" name="button">Add</button>
-            <br>
-            <br>
+			<br>
+			<br>
 			<label class="">
 				<input type="radio" name="language" class="radio-button" value="Halmesbay">
-				<span class="label-body">Halmesbay</span>
+				<span class="label-body">Paarl</span>
 			</label>
 			<label class="">
 				<input type="radio" name="language" class="radio-button" value="Bellville">
@@ -33,17 +36,18 @@
 		<div class="button">
 
 			<button class="first-button" on type="button" name="button">Show</button>
-            <br>
-            <br>
+			<br>
+			<br>
 
-			<div class="display">CJ 12134</div>
-            <div class="display">CK 34657</div>
-            <div class="display">CA 12389</div>
+			<div class="display"></div>
+			<div class="display"></div>
+			<div class="display"></div>
 
 		</div>
 		<br>
 		<div class="display"></div>
 	</div>
-	
+	</form>
 </body>
+
 </html>
