--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,7 +11,7 @@
 				<h1>Registration Number:</h1>
 				<textarea name="name" class=" inputTxt"></textarea>
 				<br>
-				<button class="first-button" on type="submit" name="button">Add</button>
+				<button class="myButton" on type="submit" name="button">Add</button>
 			</div>
 		</form>
 		<div class="span">
@@ -35,9 +35,9 @@
 		<br>
 		<div class="button">
 
-			<button class="first-button" on type="button" name="button">Show</button> 
+			<button class="myButton" on type="button" name="button">Show</button> 
 				
-		<a href="/clear"><button class="first-button" on type="button" name="button">Clear</button> </a>	
+		<a href="/clear"><button class="myButton" on type="button" name="button">Clear</button> </a>	
 			
 			<br>
 			<br>
@@ -53,7 +53,7 @@
 		<div class="displaymessage" style="color: red;"><p>{{messages.info}}</p></div>
 		{{/if}}
 		{{#if messages.success}}
-		<div class="displaymessage" style="color:yellow;"><p>{{messages.success}}</p></div>
+		<div class="displaymessage" style="color:rgb(255, 222, 32);"><p>{{messages.success}}</p></div>
 		{{/if}}
 	</div>
 	
