--- a/public/css/registration_number.css
+++ b/public/css/registration_number.css
@@ -36,4 +36,15 @@
 	background-color: rgb(114, 108, 108);
 	margin-left: 200px;
 	margin-right: 200px;
+	font-size: x-large;
+}
+.myButton {
+	 background-color: yellow;
+		border: none;
+		color: black;
+		padding: 15px 32px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
 }
