--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,6 +55,7 @@
 		{{#if messages.success}}
 		<div class="displaymessage" style="color:rgb(17, 230, 17);"><p>{{messages.success}}</p></div>
 		{{/if}}
+		 <script src="timeout.js"></script>
 	</div>
 	
 </body>
