--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,8 @@
 
 		<form action="/" method="POST">
 			<div class="first-section">
-				<h1>Registration Number:</h1>
+				<h2>Registration Number:</h2>
+				<div class="format"><h3>eg: CA 123 137 & CJ 123-454</h3></div>
 				<textarea name="name" class=" inputTxt"></textarea>
 				<br>
 				<button class="myButton" on type="submit" name="button">Add</button>
